# slider

./: Cargo.toml  LICENSE  README.md  slider.tape  slyde.tape
src/: main.rs
