[package]
name = "slyde"
version = "0.1.0"
description = "Sliding puzzle in Ratatui"
homepage = "https://github.com/MatrixFrog/slyde"
repository = "https://github.com/MatrixFrog/slyde"
authors = ["Tyler Breisacher <matrixfrog@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["games"]
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.1"
ratatui = "0.29.0"
